testsuite/tests/ghc-regress/indexed-types/should_fail/Simple1a.hs
{-# OPTIONS -findexed-types #-}

data family T1 a :: * -> *
data instance T1 Int           = T1_1   -- must fail: too few args
